Update google-cloud-nio to version 0.122.6